[package]
name = "dmslib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
ndarray = "0.15"
itertools = "0.10"
sanitize-filename = "0.4"
num-traits = "0.2"
num-derive = "0.2"
cap = "0.1"
hashbrown = { version = "0.13", optional = true, features = ["serde"] }
bitvec = "1"
bincode = "1.3.3"

[features]
default = ["hashbrown", "minmem"]
hashbrown = ["dep:hashbrown"]
minmem = []

[dev-dependencies]
iai-callgrind = "0.7.1"

[[bench]]
name = "pe0_demo_iai"
harness = false
