[package]
name = "pydms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
server = { path = "../server" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
env_logger = "0.10"
pyo3 = { version = "0.22.4", features = ["extension-module"] }
